fixed z-index problem, user stories 1-11 completed

--- a/src/components/css/Comments.css
+++ b/src/components/css/Comments.css
@@ -5,6 +5,10 @@
   row-gap: 15px;
 }
 
+.comments > p {
+  align-self: center;
+}
+
 .post-comment {
   display: flex;
   justify-content: flex-end;
