--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -6,6 +6,7 @@
   background-color: white;
   border: 5px solid grey;
   padding: 5px;
+  z-index: 999;
 }
 
 .NavBar > h1 {
